# cdp-adapt-ex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AI Chatbot Evaluation Dataset - Evaluation Dataset.csv  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP.md  Taskfile.yml  package-lock.json  package.json
ai-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai-server/app/: errors.py  follow_ups.py  llm_utils.py  location_service.py  main.py  observability.py  prompts.py  schemas.py  settings.py
ai-server/app/api/: follow_ups.py  openai.py
ai-server/app/data/: approved_follow_up_questions.json
ai-server/app/prompts/: system_prompt.md
ai-server/app/providers/: gemini.py
ai-server/app/raggle_otel/: __init__.py  client.py
ai-server/docs/: testing.md
ai-server/script/: run-test-question  update-system-prompt
ai-server/tests/: chatbot.test.ts  test_chatbot.py  test_follow_ups.py  test_openai_api.py  test_prompts.py  test_questions_data.py  test_raggle_otel.py  test_reviewed_chat_cases.py  test_reviewed_org_data.py  test_run_chat_eval.py
ai-server/utility_scripts/: run_chat_eval.py  update_system_prompt.py
backend/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  uv.lock.orig
backend/app/: main.py
backend/app/api/v1/: api.py  chat_request_utils.py  chatbot.py  deps.py  disclosure_trends.py  earth_engine.py  hazards.py  llm_endpoint_utils.py  location.py  locations.py  onboarding.py  suggest_follow_ups.py  translate.py
backend/app/core/: suggest_follow_ups.py
backend/app/data/: cdp_a_list_2025.json
backend/app/models/: base.py  location_details.py  onboarding.py  translation_cache.py
backend/app/schemas/: __init__.py  chat.py  chatbot.py  disclosure_trends.py  hazard_layer.py  location.py  location_context.py  location_v2.py  onboarding.py  suggest_follow_ups.py  translate.py
backend/app/services/: __init__.py
backend/app/services/clients/: __init__.py  earth_engine_client.py  gcs_client.py  translate_client.py  translation_text_processor.py
backend/app/services/impls/: city_resolution_service.py  city_resolution_service_impl.py  discloser_client_impl.py  earth_engine_hazard_data_provider_impl.py  gemini_client.py  hazard_mapper.py  location_details_service.py  location_profile_builder.py  sector_mapper.py  status_mapper.py  (+3 more)
backend/app/shared/: config.py  exceptions.py  limiter.py  logging.py
backend/app/utils/: hazard_layer_utils.py  prepare_contents.py  prompts.py  sanitization.py
backend/docs/: database.md  discloser-service.md  hazard-service.md  index.md  llm-integration.md  location-service.md  security.md
backend/docs/prompts/: suggest_follow_ups.md  system_prompt.md
backend/prometheus/: promethus.yml
backend/scripts/: README.md  alter_fact_hazard_pk_include_public_status.sql  audit_funding_acronym_translations.sh  export_cstar_2025_csv_archive.sh  migrate_cstar_2025_from_bigquery.sh  migrate_cstar_2025_via_gcs.sh  smoke_test_deployment.sh  start_cloud_sql_proxy.sh  start_dev_server.sh
backend/scripts/one-time-applied/: add_row_order_pks.sql  apply_individual_geometry_fix_2012273.sql  apply_individual_geometry_fixes_batch_2026-06-10.sql
backend/tests/: README.md  conftest.py
backend/tests/core/: test_suggest_follow_ups.py
backend/tests/load/: README.md  locustfile.py
backend/tests/unit/: test_hazard_layer_utils.py  test_limiter.py  test_run_chat_eval.py  test_utils.py
backend/utility_scripts/: chat_eval_cases.json  generate_openapi.py  hash_pw.py  run_chat_eval.py
data/climate_layers/: README.md  calculate_extreme_cold_wind_scores.py  calculate_flood_scores.py  calculate_fwi_scores.py  calculate_pr_temp_scores.py  pyproject.toml  run_frost_aws.sh  run_hot_days_aws.sh  run_rx5day_aws.sh
(+485 files in other folders)
