[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.9.2",
    "bcrypt>=5.0.0",
    "ddgs>=9.6.0",
    "debugpy>=1.8.19",
    "dotenv>=0.9.9",
    "earthengine-api>=1.7.4",
    "fastapi[standard]>=0.118.0",
    "google-cloud-aiplatform>=1.117.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-cloud-translate>=3.19.0",
    "google-genai>=1.39.1",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langfuse>=3.9.1",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-postgres>=2.0.24",
    "mediapy>=1.2.4",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "pillow>=11.3.0",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.10",
    "psycopg[pool]>=3.2.10",
    "pygraphviz>=1.14",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "python-jose[cryptography]>=3.5.0",
    "rich>=14.1.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.25",
    "starlette-prometheus>=0.10.0",
    "structlog>=25.4.0",
    "yt-dlp>=2025.10.22",
    "GeoAlchemy2>=0.14.0",
    "pysqlite3-binary>=0.4.7; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.5.1",
    "ipykernel>=6.30.1",
    "ruff>=0.14.9",
    "pre-commit>=4.0.0",
    "locust>=2.33.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
